--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
     testImplementation 'org.mockito:mockito-core:3.7.7'
+    testImplementation("org.skyscreamer:jsonassert:1.5.1")
 }
 
 test {
